text alignment fixed

--- a/style.css
+++ b/style.css
@@ -69,3 +69,6 @@ h2{
 footer{
     text-align: center;
 }
+#text-aligning{
+    text-align: justify;
+}
